--- a/payloads/external/edk2/Makefile
+++ b/payloads/external/edk2/Makefile
@@ -157,6 +157,9 @@ endif
 ifeq ($(CONFIG_EDK2_DASHARO_POWER_CONFIG),y)
 BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdShowPowerMenu=TRUE
 endif
+ifeq ($(CONFIG_EDK2_DASHARO_POWER_CONFIG_FAN_CURVE),y)
+BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdPowerMenuShowFanCurve=TRUE
+endif
 # DASHARO_NETWORK_BOOT_DEFAULT_ENABLE	= FALSE
 ifeq ($(CONFIG_EDK2_DASHARO_NETWORK_BOOT_DEFAULT_ENABLE),y)
 BUILD_STR += --pcd gDasharoSystemFeaturesTokenSpaceGuid.PcdDefaultNetworkBootEnable=TRUE
